--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "My project for the Build a Random Quote Machine challenge as part of the curriculum for the Front End Development Certification on Free Code Camp. Built with React.",
   "main": "index.js",
   "scripts": {
+    "build": "webpack -p",
     "start": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,7 +17,7 @@
   "bugs": {
     "url": "https://github.com/autumnchris/random-quote-machine-react/issues"
   },
-  "homepage": "https://github.com/autumnchris/random-quote-machine-react#readme",
+  "homepage": "https://autumnchris.github.io/random-quote-machine-react",
   "dependencies": {
     "axios": "^0.17.1",
     "babel-core": "^6.26.0",
