--- a/package.json
+++ b/package.json
@@ -25,17 +25,18 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.1",
-    "ejs": "^3.0.2",
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
     "mini-css-extract-plugin": "^0.5.0",
-    "mongoose": "^5.9.7",
-    "node-sass": "^4.13.1",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "mongoose": "^5.9.27",
+    "node-sass": "^4.14.1",
+    "normalize.css": "^5.0.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0"
   }
