--- a/package.json
+++ b/package.json
@@ -1,44 +1,41 @@
 {
   "name": "random-quote-machine-reactjs",
   "version": "1.0.0",
-  "description": "My project for the Build a Random Quote Machine challenge as part of the curriculum for the Front End Libraries Certification on freeCodeCamp. Built with React.js.",
-  "main": "server.js",
+  "description": "A front-end web app that gets and displays an inspirational quote at random from my own Express.js Quotes API. Built with React.js.",
+  "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "start": "npm run build && node server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack serve --mode development"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/autumnchris/random-quote-machine-reactjs.git"
   },
+  "keywords": [],
   "author": "autumnchris",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/autumnchris/random-quote-machine-reactjs/issues"
   },
-  "homepage": "https://autumnchris-quotes-reactjs.herokuapp.com",
+  "homepage": "https://autumnchris.github.io/random-quote-machine-reactjs",
   "dependencies": {
     "axios": "^0.21.1",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^1.0.1",
-    "dotenv": "^8.2.0",
-    "ejs": "^3.1.3",
-    "express": "^4.17.1",
-    "mini-css-extract-plugin": "^0.5.0",
-    "mongoose": "^5.9.27",
-    "node-sass": "^4.14.1",
     "normalize.css": "^5.0.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-middleware": "^3.7.2",
-    "webpack-hot-middleware": "^2.25.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.6",
+    "file-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^2.0.0",
+    "sass": "^1.35.1",
+    "sass-loader": "^12.1.0",
+    "webpack": "^5.41.1",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   }
 }
